--- a/LPO_Routine.ipynb
+++ b/LPO_Routine.ipynb
@@ -37,6 +37,9 @@
     "import time\n",
     "import pytz\n",
     "\n",
+    "# Importer les codes depuis un autre notebook :\n",
+    "%run Codes.ipynb\n",
+    "\n",
     "from sqlalchemy import create_engine\n",
     "import psycopg2\n",
     "from sqlalchemy.types import Integer, BigInteger, JSON"
@@ -58,10 +61,10 @@
    "outputs": [],
    "source": [
     "# Paramètres de connexion à la base de données PostgreSQL en local :\n",
-    "host = \"localhost\"\n",
-    "database = \"Test_LPO\"\n",
-    "user = \"postgres\"\n",
-    "password = \"15072022\""
+    "host = SecretsBDD.get('host')\n",
+    "database = SecretsBDD.get('database')\n",
+    "user = SecretsBDD.get('user')\n",
+    "password = SecretsBDD.get('password')"
    ]
   },
   {
@@ -123,9 +126,9 @@
    "source": [
     "# Informations : https://weatherlink.github.io/v2-api/\n",
     "\n",
-    "APIKey = 'zjbvtfdvjslxklxclzscfu6isqpqfxbg'\n",
-    "APISecret = 'mih0udjsuetwaatpwzrqzeglljmy889b'\n",
-    "StationID = 122495"
+    "APIKey = SecretsAPI.get('APIKey')\n",
+    "APISecret = SecretsAPI.get('APISecret')\n",
+    "StationID = SecretsAPI.get('StationID')"
    ]
   },
   {
