--- a/LPO_Historique.ipynb
+++ b/LPO_Historique.ipynb
@@ -36,6 +36,9 @@
     "import tqdm\n",
     "import time\n",
     "\n",
+    "# Importer les codes depuis un autre notebook :\n",
+    "%run Codes.ipynb\n",
+    "\n",
     "from sqlalchemy import create_engine\n",
     "import psycopg2\n",
     "from sqlalchemy.types import Integer, BigInteger, JSON"
@@ -58,9 +61,9 @@
    "source": [
     "# Informations : https://weatherlink.github.io/v2-api/\n",
     "\n",
-    "APIKey = 'zjbvtfdvjslxklxclzscfu6isqpqfxbg'\n",
-    "APISecret = 'mih0udjsuetwaatpwzrqzeglljmy889b'\n",
-    "StationID = 122495"
+    "APIKey = SecretsAPI.get('APIKey')\n",
+    "APISecret = SecretsAPI.get('APISecret')\n",
+    "StationID = SecretsAPI.get('StationID')"
    ]
   },
   {
@@ -159,16 +162,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06b8590b",
+   "id": "80f5139f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Paramètres de connexion à la base de données PostgreSQL en local :\n",
-    "host = \"localhost\"\n",
-    "database = \"Test_LPO\"\n",
-    "user = \"postgres\"\n",
-    "password = \"15072022\"\n",
-    "\n",
+    "host = SecretsBDD.get('host')\n",
+    "database = SecretsBDD.get('database')\n",
+    "user = SecretsBDD.get('user')\n",
+    "password = SecretsBDD.get('password')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06b8590b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Début du chronomètre :\n",
     "start_time = time.time()\n",
     "\n",
