Création d'un fichier unique

--- a/LPO_Routine.ipynb
+++ b/LPO_Routine.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "1c98ba20",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "e00245af",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c74dd322",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "5d308f51",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
        "1713218400"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,14 +117,12 @@
     "data = cur.fetchall()\n",
     "\n",
     "# Création d'un DataFrame à partir des données\n",
-    "df = pd.DataFrame(data, columns=[desc[0] for desc in cur.description])\n",
+    "LastLoadTimestamp = pd.DataFrame(data, columns=[desc[0] for desc in cur.description]).values[0][0]\n",
     "\n",
     "# Fermeture du curseur et de la connexion\n",
     "cur.close()\n",
     "conn.close()\n",
     "\n",
-    "# Récupération de la ts la plus récente de la BDD :\n",
-    "LastLoadTimestamp = df.values[0][0]\n",
     "LastLoadTimestamp"
    ]
   },
@@ -138,18 +136,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "5885bb18",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Le timestamp correspondant à la date du 2024-04-16 00:00:00 est : 1713218400\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Date d'aujourd'hui à minuit :\n",
     "Today = datetime.date.today()\n",
@@ -166,18 +156,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "b988c4b4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "0it [00:00, ?it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# DataFrame historiques :\n",
     "dfNew = pd.DataFrame()\n",
@@ -225,49 +207,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "66a86b25",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Data Frame Finale :\n",
     "dfNew.head()"
@@ -283,18 +226,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "06b8590b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Durée d'exécution : 0.0 minutes\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Début du chronomètre :\n",
     "start_time = time.time()\n",
