--- a/Notebooks/LPO_Historique.ipynb
+++ b/Notebooks/LPO_Historique.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "1c98ba20",
    "metadata": {},
    "outputs": [],
@@ -25,9 +25,6 @@
     "import numpy as np\n",
     "import tqdm\n",
     "import time\n",
-    "\n",
-    "# Importer les codes depuis un autre notebook :\n",
-    "%run Codes.ipynb\n",
     "\n",
     "# Importer les codes depuis un fichier .env :\n",
     "from dotenv import load_dotenv\n",
@@ -50,21 +47,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "c7c465b5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Informations API : https://weatherlink.github.io/v2-api/\n",
     "# Clés API :\n",
-    "APIKey = os.getenv(\"APIKey\")\n",
-    "APISecret = os.getenv(\"APISecret\")\n",
-    "stationID = os.getenv(\"stationID\")"
+    "API_key = os.getenv(\"API_key\")\n",
+    "API_secret = os.getenv(\"API_secret\")\n",
+    "station_ID = os.getenv(\"station_ID\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "id": "80f5139f",
    "metadata": {},
    "outputs": [],
@@ -74,7 +71,7 @@
     "database = os.getenv(\"database\")\n",
     "user = os.getenv(\"user\")\n",
     "password = os.getenv(\"password\")\n",
-    "nomTable = os.getenv(\"nomTable\")"
+    "nom_table = os.getenv(\"nom_table\")"
    ]
   },
   {
@@ -1769,7 +1766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "id": "5d308f51",
    "metadata": {},
    "outputs": [
@@ -1975,7 +1972,7 @@
        "[5 rows x 68 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1988,7 +1985,7 @@
     "cur = conn.cursor()\n",
     "\n",
     "# Exécution d'une requête SQL pour sélectionner les données de ma_table\n",
-    "cur.execute(f\"SELECT * FROM {nomTable} LIMIT 5\")\n",
+    "cur.execute(f\"SELECT * FROM {nom_table} LIMIT 5\")\n",
     "\n",
     "# Récupération des données dans une liste de tuples\n",
     "data = cur.fetchall()\n",
@@ -2111,9 +2108,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "lpo-aura-py3.11",
    "language": "python",
-   "name": "python3"
+   "name": "lpo-aura-py3.11"
   },
   "language_info": {
    "codemirror_mode": {
